# background_remover

./: LICENSE  README.md  app.py  main.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: index.html
